--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,8 @@ jobs:
 
       - name: Format code
         run: test -z $(go fmt ./...)
+
+      - name: Run linter
+        uses: dominikh/staticcheck-action@v1
+        with:
+          version: "latest"
