--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,9 +9,15 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Install goose
+        run: go install github.com/pressly/goose/v3/cmd/goose@latest
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -29,8 +35,11 @@ jobs:
       - name: Setup up Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Deploy artifact
+      - name: Build image
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-432023/notely-ar-repo/notely:latest .
+
+      - name: Migrate database
+        run: ./scripts/migrateup.sh
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-432023/notely-ar-repo/notely:latest --region us-central1 --allow-unauthenticated --project notely-432023 --max-instances=4
